src/objects/ADBHealthAssessmentParams__mdt.object
<CustomObject>
    <fields>
        <fullName>API_KEY__c</fullName>
        <label>API_KEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARTNER_ID__c</fullName>
        <label>PARTNER_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT__c</fullName>
        <label>PRODUCT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_ID__c</fullName>
        <label>USER_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ADBHealthAssessmentParams</label>
    <pluralLabel>ADBHealthAssessmentParams</pluralLabel>
</CustomObject>